<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context="com.google.codelabs.mdc.java.myatm.Controller.MainActivity">


    <LinearLayout


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingLeft="26dp"
            android:paddingRight="26dp"
            android:paddingBottom="26dp">

        <androidx.appcompat.widget.Toolbar
                style="@style/Widget.Shrine.Toolbar"
                android:id="@+id/app_bar"
                android:layout_width="421dp"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="center"
                android:background="@color/cardview_dark_background"
                app:title="@string/shr_app_name"/>


        <ImageView
                android:layout_width="105dp"
                android:layout_height="131dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="16dp"
                app:srcCompat="@drawable/atm"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="13dp"
                android:text="@string/shr_app_name"
                android:textAllCaps="true"
                android:textSize="16sp"/>

        <Spinner
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/transactionAmount"
                android:padding="5dip"
                android:layout_width="337dp"
                android:layout_height="48dp"
                android:dropDownWidth="match_parent"
                android:entries="@array/transactionAmountChoices"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal" style="@android:style/Widget.DeviceDefault.Spinner"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/title_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/shr_account_title"
                    android:textAllCaps="true"
                    android:textSize="16sp"/>
            <TextView
                    android:id="@+id/box_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_below="@id/title_account"
                    android:text="5000"
                    android:textAllCaps="true"
                    android:textSize="45sp"/>


        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical"
        >

            <TextView
                    android:id="@+id/title_hand"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/shr_hand_title"
                    android:textAllCaps="true"
                    android:textSize="16sp"/>
            <TextView
                    android:id="@+id/box_hand"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_below="@id/title_hand"
                    android:text="250"
                    android:textAllCaps="true"
                    android:textSize="45sp"/>
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/withdraw_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickWithdraw"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/shr_button_withdraw" tools:ignore="OnClick"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/deposit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickDeposit"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_toStartOf="@id/withdraw_button"
                    android:layout_toLeftOf="@id/withdraw_button"
                    android:text="@string/shr_button_deposit" tools:ignore="OnClick"/>

        </RelativeLayout>


    </LinearLayout>

</ScrollView>
